--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>askdjasld</h1>
-    
+    <h1>Hola mundo!</h1>
+    <script src="bundle.js"></script>
 </body>
 </html>
